# scraf-backend

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMake to Meson - ODB.md  CMakeLists.txt  CNAME  Considerazioni API.md  Considerazioni-API.md  ODB example.md  README.md  index.html  main.cpp  meson.build  meson_options.txt  scraf.raml
.github/workflows/: cmake.yml  codacy-analysis.yaml  codacy-analysis.yml  meson.yaml  raml-gh-pages.yaml  raml-gh-pages.yml  test-and-analyze.yaml  test-and-analyze.yaml.disabled
docs/: Documentation Gtest in c++.md  Documentation Gtest in c++.txt  main.cpp.old
docs/ODB/: Create class.md
raml/school/: collection-get-response.json  collection-post-request.json  collection-post-response.json  item-get-response.json  item-patch-request.json
raml/student/: collection-post-request.json  collection-post-response.json  item-get-response.json  item-patch-request.json
raml/subject/: item-patch-request.json
raml/teacher/: collection-get-response.json  collection-post-request.json  item-get-response.json  item-patch-request.json
scraf-backend/: concepts.hpp  main.cpp  mark.hpp  object_pool.hpp  school.hpp  scraf.hpp  scraf.test.cpp  scraf_curl.cpp  scraf_curl.hpp  student.hpp  teacher.hpp
src/: main.cpp  object_pool.hpp  school.hpp  school_class.hpp  student.hpp
subprojects/: rapidjson.wrap
tests/: common.hpp  create_student.cpp  meson.build  search_student.cpp  students.cpp  studentsid.cpp  studentsmarks.cpp  studentssubjects.cpp  teacherid.cpp  teachers.cpp  teachersmarks.cpp  teacherssubjectid.cpp  teacherssubjects.cpp
